@startuml
title Diagrama de Clases - Cálculo de Impuestos de un Carro

' ==== ESTILO GLOBAL ====
skinparam backgroundColor #FFFFFF
skinparam shadowing false

skinparam class {
  BackgroundColor #FDFDFD
  BorderColor #222222
  FontColor #222222
  FontSize 14
  FontStyle bold
  AttributeIconSize 0
}

skinparam title {
  FontSize 16
  FontStyle bold
  FontColor #333333
}

' ==== MODELO ====
class Vehiculo {
  - String marca
  - String modelo
  - int anioFabricacion
  - int cilindraje
  - double avaluoComercial
  - String tipoUso
  + getMarca(): String
  + setMarca(marca:String): void
  + getModelo(): String
  + setModelo(modelo:String): void
  + getAnioFabricacion(): int
  + setAnioFabricacion(anio:int): void
  + getCilindraje(): int
  + setCilindraje(cilindraje:int): void
  + getAvaluoComercial(): double
  + setAvaluoComercial(avaluo:double): void
  + getTipoUso(): String
  + setTipoUso(tipo:String): void
}

class CalculadoraImpuestos {
  + calcularImpuesto(vehiculo:Vehiculo): double
}

' ==== VISTA ====
class ImpuestosView {
  + mostrarResultado(impuesto:double): void
  + getDatosVehiculo(): Vehiculo
}

' ==== CONTROLADOR ====
class ImpuestosController {
  - vista: ImpuestosView
  - calculadora: CalculadoraImpuestos
  + iniciar(): void
  + actionPerformed(e:ActionEvent): void
}

' ==== RELACIONES (sin etiquetas) ====
Vehiculo --> CalculadoraImpuestos
ImpuestosController --> ImpuestosView
ImpuestosController --> CalculadoraImpuestos
ImpuestosView --> Vehiculo

@enduml
